# RegridParcelBoundaries

./: .gitignore  README.md  pyproject.toml  test_regrid.py
parcelizer/: README.md  __init__.py  cli.py  pyproject.toml
parcelizer/core/: __init__.py  config.py  demo_data.py  image_processor.py  pipeline.py  regrid_client.py  vision_extractor.py
parcelizer/parcelizer/src/parcelizer/: __init__.py  cli.py  ocr.py  regrid.py  utils.py  vision.py  web.py
parcelizer/tests/: test_utils.py
parcelizer/web/: __init__.py  app.py
parcelizer/web/static/css/: style.css
parcelizer/web/static/js/: app.js
parcelizer/web/templates/: index.html
