[project]
name = "regridparcelboundaries"
version = "0.1.0"
description = "Local-first tool for extracting parcel boundaries from maps using AI vision and Regrid API"
authors = [
    {name = "Parcelizer Team"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
